--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
                             <li><a class="dropdown-item" href="">Credit Card</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item m-1"><a class="nav-link p-2" aria-current="page" href="SignIn.html">Log in</a></li>
-                    <li class="nav-item m-1"><a class="nav-link p-2" aria-current="page" href="SignUpPersonalInfo.html">Create Account</a></li>
+                    <li class="nav-item m-1"><a class="nav-link p-2" aria-current="page" href="">Log in</a></li>
+                    <li class="nav-item m-1"><a class="nav-link p-2" aria-current="page" href="">Create Account</a></li>
                 </ul>
             </div>
         </div>
